--- a/SparcWeb/app.scss
+++ b/SparcWeb/app.scss
@@ -1,7 +1,7 @@
 ﻿@import "wwwroot/Styles/Global/_variables.scss";
 @import "wwwroot/Styles/Global/_assets.scss";
 @import "wwwroot/Styles/Global/_typography.scss";
-
+@import "wwwroot/Styles/Global/_nav.scss";
 
 @import "wwwroot/Styles/Page/Index.scss";
 @import "wwwroot/Styles/Page/ProjectList.scss";
