--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -208,6 +208,7 @@
                 margin: 0 auto;
 
                 .card-wrapper {
+                    max-width: 1216px;
                     margin-bottom: 0px;
                     text-align: left;
                     display: flex;
@@ -216,7 +217,7 @@
                     gap: 32px;
 
                     .project-card {
-                        width: 520px;
+                        width: 100%;
                         margin-bottom: 0px;
 
                         .card-content {
@@ -355,5 +356,9 @@
                 }
             }
         }
+    }
+
+    @media only screen and (max-width: 760px) {
+        margin-top: 63px;
     }
 }
