change page urls for projects and blogs

--- a/SparcWeb/Shared/NavMenu.razor
+++ b/SparcWeb/Shared/NavMenu.razor
@@ -8,13 +8,13 @@
                 <a href="#">Home</a>
             </div>
             <div class="nav-link">
-                <a href="/bloglist">Resources</a>
+                <a href="/Blogs">Resources</a>
             </div>
             <div class="nav-link">
-                <a href="/projectlist">Projects</a>
+                <a href="/Projects">Projects</a>
             </div>
             <div class="nav-link">
-                <a href="/contact">Contact</a>
+                <a href="/Contact">Contact</a>
             </div>
         </div>
         <div class="community-join">
