--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -85,7 +85,7 @@
                 <p class="subtitle-medium">Our Core Values</p>
             </div>
             <div class="header">
-                <h2>Our three values, by which sparc and its community function.</h2>
+                <h2 class="subtitle-large">Our three values, by which sparc and its community function.</h2>
             </div>
             <div class="card-wrapper">
                 <div class="card-value">
@@ -254,7 +254,7 @@
                         <img src="./images/sparc-approved-badge-2x 1.png" />
                     </div>
                     <div class="card-header">
-                        <h6 class="title-2 semi-bold">Individuals</h6>
+                        <h6 class="title-2 semi-bold">Companies</h6>
                         <p class="subtitle-medium">As a company, you have the ability to lead by example, and so we want to partner with companies to expand our “sparc coop” and proudly show our values are aligned.
 
                         </p>
