--- a/SparcWeb/wwwroot/Styles/Global/_assets.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_assets.scss
@@ -51,6 +51,15 @@ section:last-of-type {
     }
 }
 
+.resources-tag {
+    background: $peach-100;
+
+    p {
+        color: var(--primary-500);
+    }
+}
+
+
 .blog-tags {
     display: flex;
     align-items: center;
