change p.subtitle classes for project and blog cards

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -134,7 +134,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
@@ -160,7 +160,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
