--- a/SparcWeb/Shared/BlogPartial.razor
+++ b/SparcWeb/Shared/BlogPartial.razor
@@ -8,7 +8,7 @@
             <button class="tag btn-small">#Productivity</button>
         </div>
         <div>
-            <p class="title-2">
+            <p class="subtitle-medium">
                 Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
             </p>
         </div>
@@ -23,7 +23,7 @@
             <button class="tag btn-small">#Productivity</button>
         </div>
         <div>
-            <p class="title-2">
+            <p class="subtitle-medium">
                 Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
             </p>
         </div>
@@ -38,7 +38,7 @@
             <button class="tag btn-small">#Productivity</button>
         </div>
         <div>
-            <p class="title-2">
+            <p class="subtitle-medium">
                 Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements.
             </p>
         </div>
