mix mission wrapper margins for mobile

--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -546,6 +546,9 @@
             .mission {
                 padding-bottom: 17px;
 
+                &-wrapper {
+                    width: 100%;
+                }
 
                 &-icon {
                     margin-bottom: 38px;
